syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.aggregator.api;

option java_outer_classname = "DayApi";

service Day {
  option (akkaserverless.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.Day"
      entity_type: "day"
      state: "io.aggregator.entity.DayState"
      events: [
        "io.aggregator.entity.DayActivated",
        "io.aggregator.entity.HourAdded",
        "io.aggregator.entity.DayAggregationRequested",
        "io.aggregator.entity.DayAggregated",
        "io.aggregator.entity.ActiveHourAggregated"  //
      ]
    }
  };

  rpc ActivateHour(ActivateHourCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/day/activate-hour"
      body: "*"
    };
  }

  rpc AggregateDay(AggregateDayCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/day/aggregate-day"
      body: "*"
    };
  }

  rpc HourAggregation(HourAggregationCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/day/hour-aggregation"
      body: "*"
    };
  }
}

message ActivateHourCommand {
  string merchant_id = 1 [(akkaserverless.field).entity_key = true];
  string service_code = 2 [(akkaserverless.field).entity_key = true];
  string account_from = 3 [(akkaserverless.field).entity_key = true];
  string account_to = 4 [(akkaserverless.field).entity_key = true];
  int64 epoch_day = 5 [(akkaserverless.field).entity_key = true];
  int64 epoch_hour = 6;
}

message AggregateDayCommand {
  string merchant_id = 1 [(akkaserverless.field).entity_key = true];
  string service_code = 2 [(akkaserverless.field).entity_key = true];
  string account_from = 3 [(akkaserverless.field).entity_key = true];
  string account_to = 4 [(akkaserverless.field).entity_key = true];
  int64 epoch_day = 5 [(akkaserverless.field).entity_key = true];
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message HourAggregationCommand {
  string merchant_id = 1 [(akkaserverless.field).entity_key = true];
  string service_code = 2 [(akkaserverless.field).entity_key = true];
  string account_from = 3 [(akkaserverless.field).entity_key = true];
  string account_to = 4 [(akkaserverless.field).entity_key = true];
  int64 epoch_day = 5 [(akkaserverless.field).entity_key = true];
  int64 epoch_hour = 6;
  double transaction_total_amount = 7;
  int32 transaction_count = 8;
  google.protobuf.Timestamp last_update_timestamp = 9;
  google.protobuf.Timestamp aggregate_request_timestamp = 10;
  string payment_id = 11;
}
